# advent-of-code-2024

./: .gitattributes  Cargo.toml  flake.nix  package.nix  shell.nix
benches/: benchmark.rs
data/: d01.txt  d02.txt  d03.txt  d04.txt  d05.txt  d06.txt  d07.txt  d08.txt  d09.txt  d10.txt  d11.txt  d13.txt  d14.txt  d15.txt  d16.txt  d17.txt  d18.txt  d19.txt  d20.txt  d21.txt  d22.txt  d23.txt  d24.txt  d25.txt
src/: d01.rs  d03.rs  days.rs  main.rs
src/days/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  template.rs  utils.rs
