[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"
itertools = "0.13.0"
ndarray = "0.16.1"
once_cell = "1.20.2"
petgraph = "0.6.5"
regex = "1.11.1"

[lib]
bench = false

[[bin]]
name = "advent-of-code-2024"
bench = false

[[bench]]
name = "benchmark"
harness = false
