[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.54.0"
criterion = "0.5.1"
itertools = "0.13.0"
ndarray = "0.16.1"
petgraph = "0.6.5"
regex = "1.11.1"

[lib]
bench = false

[[bin]]
name = "advent-of-code-2024"
bench = false

[[bench]]
name = "benchmark"
harness = false
